tree-sitter-darklang/grammar.js
    source_file: $ =>
      seq(
        // all type and fn and value defs first
        repeat(choice($.module_decl, $.type_decl, $.fn_decl, $.val_decl)),

        // then the expressions to evaluate, in order
        optional($.expression),
      ),

    match_pattern: $ =>
      choice(
        $.unit,
        alias($.bool_literal, $.bool),
        alias($.int8_literal, $.int8),
        alias($.uint8_literal, $.uint8),
        alias($.int16_literal, $.int16),
        alias($.uint16_literal, $.uint16),
        alias($.int32_literal, $.int32),
        alias($.uint32_literal, $.uint32),
        alias($.int64_literal, $.int64),
        alias($.uint64_literal, $.uint64),
        alias($.int128_literal, $.int128),
        alias($.uint128_literal, $.uint128),
        alias($.bigint_literal, $.int),
        alias($.float_literal, $.float),
        alias($.char_literal, $.char),
        alias($.string_literal, $.string),
        alias($.mp_list, $.list),
        alias($.mp_list_cons, $.list_cons),
        alias($.mp_tuple, $.tuple),
        alias($.mp_enum, $.enum),
        alias($.variable_identifier, $.variable),
        $.mp_or,
      ),

    //
    // match pattern - list
    mp_enum_fields: $ => enum_fields_base($, $.match_pattern),

    _atom: $ =>
      choice(
        $.unit,
        $.bool_literal,
        $.int8_literal,
        $.uint8_literal,
        $.int16_literal,
        $.uint16_literal,
        $.int32_literal,
        $.uint32_literal,
        $.int64_literal,
        $.uint64_literal,
        $.int128_literal,
        $.uint128_literal,
        $.bigint_literal,
        $.float_literal,
        $.string_segment,
        $.char_literal,
        $.list_literal,
        $.dict_literal,
        $.record_literal,
        $.enum_literal,
        $.variable_identifier,
        $.field_access,
        $.tuple_literal,
        $.record_update,
        $.qualified_val_or_fn_name,
        $.dbReference,
        $.paren_expression,
      ),

    // operand/value tier: an atom, a function application, or an infix chain.
    // `apply` is included so applications can be infix operands and values.
    simple_expression: $ =>
      choice(
        $._atom,
        $.apply,
        $.infix_operation,
      ),

    expression: $ =>
      choice(
        // `apply` is reachable via `simple_expression`; not listed separately
        // here (that would make it derivable two ways → grammar conflict).
        $.simple_expression,

        $.if_expression,
        $.let_expression,

        $.match_expression,

        $.lambda_expression,
        $.pipe_expression,
        $.statement,
      ),

    bool_literal: $ => choice(/true/, /false/),

    //
    // Integers
    //CLEANUP: we are using .NET suffixes for integers (e.g. `1L` for Int64) temporarily until we remove the old parser.

    digits: $ => choice($.positive_digits, $.negative_digits),
    positive_digits: $ => /\d+/,

    int64_literal: $ =>
      seq(field("digits", $.digits), field("suffix", alias("L", $.symbol))),

    float_literal: $ => /[+-]?[0-9]+\.[0-9]+/,

    //
    // Characters
    char_or_string_escape_sequence: _ =>
      token.immediate(
        choice(
          seq("\\", /(\"|\'|\\|\/|a|b|f|n|r|t|v)/),
          seq("\\", "x", /[0-9a-fA-F]{2}/),
          seq("\\", "X", /[0-9a-fA-F]{4}/),
          seq("\\", "u", /[0-9a-fA-F]{4}/),
          seq("\\", "U", /[0-9a-fA-F]{8}/),
        ),
      ),

    char_literal: $ =>
      seq(
        field("symbol_open_single_quote", alias("'", $.symbol)),
        field("content", $.character),
        field("symbol_close_single_quote", alias("'", $.symbol)),
      ),
    character: $ =>
      choice(
        // higher precedence than escape sequences
        token.immediate("'"),
        token.immediate(prec(1, /[^'\\\n]/)),
        $.char_or_string_escape_sequence,
      ),

    //
    // Strings
    string_literal: $ =>
      choice(
        seq(
          field("symbol_open_quote", alias('"', $.symbol)),
          optional(field("content", $.string_content)),
          field("symbol_close_quote", alias('"', $.symbol)),
        ),
        // multiline strings
        seq(
          field("symbol_open_quote", alias('"""', $.symbol)),
          optional(field("content", $.multiline_string_content)),
          field("symbol_close_quote", alias('"""', $.symbol)),
        ),
      ),

    string_content: $ =>
      repeat1(
        choice(
          // higher precedence than escape sequences
          token.immediate(prec(1, /[^\\"\n]+/)),
          $.char_or_string_escape_sequence,
        ),
      ),

    string_segment: $ => choice($.string_literal, $.string_interpolation),

    //
    // List
    list_literal: $ => list_literal_base($, $.list_content),
    list_content: $ => list_content_base($, $.expression),

    //
    // Dict
    tuple_literal: $ =>
      tuple_literal_base($, $.expression, $.tuple_literal_the_rest),
    tuple_literal_the_rest: $ => tuple_literal_the_rest_base($, $.expression),

    //
    // Record
    record_literal: $ => record_literal_base($, $.record_content),
    record_content: $ => record_content_base($, $.record_pair),
    record_pair: $ => record_pair_base($, $.expression),

    //
    // Record update
    // e.g. { RecordForUpdate { x = 4L; y = 1L } with y = 2L }
    infix_operation: $ =>
      // given `1 + 2 * 3`, this will parse as `1 + (2 * 3)`
      choice(
        // Power
        prec.right(
          PREC.EXPONENT,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(exponentOperator, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // multiplication, division, modulo
        prec.left(
          PREC.PRODUCT,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(multiplicativeOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // addition, subtraction
        prec.left(
          PREC.SUM,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(additiveOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // Comparison
        prec.left(
          PREC.COMPARISON,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(comparisonOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // Logical operations
        prec.left(
          PREC.LOGICAL_AND,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(logicalOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),
        prec.left(
          PREC.LOGICAL_OR,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(logicalOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // String concatenation
        prec.left(
          PREC.SUM,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(stringConcatOperator, $.operator)),
            field("right", $.simple_expression),
          ),
        ),
      ),

    //
    // If expressions
    if_expression: $ =>
      prec.right(
        seq(
          field("keyword_if", alias("if", $.keyword)),
          field("condition", $.expression),
          field("keyword_then", alias("then", $.keyword)),
          choice(
            seq(
              $.indent,
              repeat1(field("then_expression", $.expression)),
              $.dedent,
            ),
            field("then_expression", $.expression),
          ),
          optional(
            seq(
              field("keyword_else", alias("else", $.keyword)),
              choice(
                seq(
                  $.indent,
                  repeat(field("else_expression", $.expression)),
                  $.dedent,
                ),
                field("else_expression", $.expression),
              ),
            ),
          ),
        ),
      ),

    // field access
    // e.g. `person.name`
    field_access: $ =>
      prec(
        PREC.FIELDACCESS,
        seq(
          field(
            "expr",
            choice(
              $.variable_identifier,
              $.record_literal,
              $.paren_expression,
              $.field_access,
            ),
          ),
          field("symbol_dot", alias(".", $.symbol)),
          field("field_name", $.variable_identifier),
        ),
      ),

    //
    // DB reference
    match_expression: $ =>
      seq(
        field("keyword_match", alias("match", $.keyword)),
        field("arg", $.expression),
        field("keyword_with", alias("with", $.keyword)),
        field("cases", prec.left(repeat1($.match_case))),
      ),
    match_case: $ =>
      seq(
        field("symbol_pipe", alias("|", $.symbol)),
        field("pattern", $.match_pattern),
        optional(
          seq(
            field("when_keyword", alias("when", $.keyword)),
            field("guard_expr", $.expression),
          ),
        ),
        field("symbol_arrow", alias("->", $.symbol)),
        choice(
          seq($.indent, field("rhs", $.expression), $.dedent),
          field("rhs", $.expression),
        ),
      ),

    //
    // Function call
    // e.g. `Int64.add 1 2
    apply: $ =>
      prec.right(
        seq(
          // TODO: fn should be an expression
          field("fn", $.qualified_fn_name),
          choice(
            seq(
              // args are `_atom`s (not `simple_expression`) so application
              // binds tighter than infix: `f a + b` is `(f a) + b`, and an
              // operator stops arg collection so `f x ++ g y` is `(f x) ++ (g y)`.
              field("args", repeat1($._atom)),
              optional($._function_boundary),
            ),
            seq(
              $.indent,
              field("args", seq($.expression, repeat(seq(/\n/, $.expression)))),
              $.dedent,
            ),
          ),
        ),
      ),

    // ---------------------
    // Pipe expressions
    // ---------------------

    //
    // Pipe lambda
    operator: $ =>
      choice(
        exponentOperator,
        multiplicativeOperators,
        additiveOperators,
        comparisonOperators,
        logicalOperators,
        stringConcatOperator,
      ),

    pipe_enum: $ => enum_literal_base($, $.pipe_enum_fields),
    pipe_expr: $ =>
      choice($.pipe_lambda, $.pipe_infix, $.pipe_fn_call, $.pipe_enum),

    pipe_exprs: $ =>
      prec.left(
        seq(
          field("symbol_pipe", alias("|>", $.symbol)),
          field("pipe_expr", $.pipe_expr),
        ),
      ),

    pipe_expression: $ =>
      prec.left(
        PREC.PIPE_EXPR,
        seq(
          field("expr", $.expression),
          repeat1(field("pipe_exprs", $.pipe_exprs)),
        ),
      ),

    // ---------------------
    // Common
    // ---------------------
    type_reference: $ => choice($.builtin_type, $.qualified_type_name),

    builtin_type: $ =>
      choice(
        /Unit/,
        /Bool/,
        /Int8/,
        /UInt8/,
        /Int16/,
        /UInt16/,
        /Int32/,
        /UInt32/,
        /Int64/,
        /UInt64/,
        /Int128/,
        /UInt128/,
        /Int/,
        /Float/,
        /Char/,
        /String/,
        /DateTime/,
        /Uuid/,
        /Blob/,
        $.list_type_reference,
        $.stream_type_reference,
        $.tuple_type_reference,
        $.dict_type_reference,
        $.fn_type_reference,
        $.variable_type_reference,

        $.db_type_reference,
      ),

    //
    // List<T>
    qualified_fn_name: $ =>
      seq(
        seq(
          repeat(seq($.module_identifier, alias(".", $.symbol))),
          $.fn_identifier,
        ),
        optional(field("type_args", $.type_args)),
      ),

    qualified_type_name: $ =>
      prec(
        1,
        seq(
          seq(
            repeat(seq($.module_identifier, alias(".", $.symbol))),
            field("type_identifier", $.type_identifier),
          ),
          optional(field("type_args", $.type_args)),
        ),
      ),

    type_args: $ =>
      seq(
        field("symbol_open_angle", alias(token.immediate("<"), $.symbol)),
        field("type_args_items", $.type_args_items),
        field("symbol_close_angle", alias(token.immediate(">"), $.symbol)),
      ),
    type_args_items: $ =>
      seq(
        $.type_reference,
        repeat(
          seq(field("symbol_comma", alias(",", $.symbol)), $.type_reference),
        ),
      ),

    // e.g. `LanguageTools in `PACKAGE.Darklang.LanguageTools.SomeType`
    module_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    // e.g. `Person` in `type MyPerson = ...`
    type_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    // e.g. `newline` in `val newline = '\n'`
    fn_identifier: $ => prec(PREC.FN_IDENTIFIER, /[a-z_][a-zA-Z0-9_']*/),

    /** e.g. `x` in `let double (x: Int) = x + x`
     *
     * for let bindings, params, etc. */
    variable_identifier: $ => prec(PREC.VAR_IDENTIFIER, /[a-z_][a-zA-Z0-9_']*/),

    // e.g. `Dict { ``Content-Length`` } = "0"`
    enum_case_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    newline: $ => /\n/,
