tree-sitter-darklang/test/corpus/exhaustive/exprs/binary_operation.txt
==================
logical AND
==================

true && true

---

(source_file
  (expression
    (infix_operation
      (expression
        (bool_literal))
      (operator)
      (expression
        (bool_literal)))))



==================
logical OR
==================
true || true

---

(source_file
  (expression
    (infix_operation
      (expression
        (bool_literal))
      (operator)
      (expression
        (bool_literal)))))
