tree-sitter-darklang/test/corpus/exhaustive/exprs/constant.txt
==================
package constant
==================

Stdlib.List.empty

---

(source_file
  (expression
    (qualified_const_name
      (module_identifier) (symbol) (module_identifier) (symbol) (constant_identifier)
    )
  )
)
